crates/ruma-common/tests/api/ui/deprecated-without-added.stderr
error: no rules expected the token `=>`
 --> tests/api/ui/deprecated-without-added.rs:7:14
  |
7 |     unstable => "/a/path",
  |              ^^ no rules expected this token in macro call
